fix: show DAO harvest submissions immediately
